// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading renders 1`] = `
.c1 {
  font-size: 32px;
  margin: 0px;
  font-weight: regular;
}

.c0 {
  line-height: 1.125;
}

<p
  className="c0 c1"
  fontSize={5}
/>
`;

exports[`Heading uses <Text> component properties 1`] = `
.c1 {
  font-size: 32px;
  margin: 0px;
  color: #e42d42;
  text-align: center;
  font-weight: regular;
}

.c0 {
  line-height: 1.125;
}

<p
  className="c0 c1"
  color="primary"
  fontSize={5}
/>
`;

exports[`Heading with default theme font size, when fontSize prop not used 1`] = `
.c1 {
  font-size: 32px;
  margin: 0px;
  font-weight: regular;
}

.c0 {
  line-height: 1.125;
}

<p
  className="c0 c1"
  fontSize={5}
/>
`;

exports[`Heading with h1-h6 dot-notation 1`] = `
.c0 {
  line-height: 1.125;
}

<h1
  className="c0"
  fontSize={6}
/>
`;

exports[`Heading with h1-h6 dot-notation 2`] = `
.c0 {
  line-height: 1.125;
}

<h2
  className="c0"
  fontSize={5}
/>
`;

exports[`Heading with h1-h6 dot-notation 3`] = `
.c0 {
  line-height: 1.125;
}

<h3
  className="c0"
  fontSize={4}
/>
`;

exports[`Heading with h1-h6 dot-notation 4`] = `
.c0 {
  line-height: 1.125;
}

<h4
  className="c0"
  fontSize={3}
/>
`;

exports[`Heading with h1-h6 dot-notation 5`] = `
.c0 {
  line-height: 1.125;
}

<h5
  className="c0"
  fontSize={2}
/>
`;

exports[`Heading with h1-h6 dot-notation 6`] = `
.c0 {
  line-height: 1.125;
}

<h6
  className="c0"
  fontSize={0}
/>
`;
